--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="swiper-wrapper block">
           <div class="swiper-slide block__item"><a href = '#'><img src="img/Lenovo.svg" alt="Lenovo"></a></div>
           <div class="swiper-slide block__item"><a href = '#'><img src="img/Samsung.svg" alt="Samsung"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/Apple.svg" alt="Apple"></a></div>
-          <div class="swiper-slide block__item"> <a href = '#'><img src="/img/Bosh.svg" alt="Bosh"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/HP.svg" alt="HP"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/Acer.svg" alt="Acer"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/Sony.svg" alt="Sony"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/ViewSonic.svg" alt="Samsung"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/Apple.svg" alt="Apple"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/Apple.svg" alt="Apple"></a></div>
-          <div class="swiper-slide block__item"> <a href = '#'><img src="/img/Bosh.svg" alt="Bosh"></a></div>
-          <div class="swiper-slide block__item"><a href = '#'><img src="/img/HP.svg" alt="HP"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/Apple.svg" alt="Apple"></a></div>
+          <div class="swiper-slide block__item"> <a href = '#'><img src="img/Bosh.svg" alt="Bosh"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/HP.svg" alt="HP"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/Acer.svg" alt="Acer"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/Sony.svg" alt="Sony"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/ViewSonic.svg" alt="Samsung"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/Apple.svg" alt="Apple"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/Apple.svg" alt="Apple"></a></div>
+          <div class="swiper-slide block__item"> <a href = '#'><img src="img/Bosh.svg" alt="Bosh"></a></div>
+          <div class="swiper-slide block__item"><a href = '#'><img src="img/HP.svg" alt="HP"></a></div>
         </div>
         <button class="show-more-btn">
             <img src="img/icon.svg" alt="icon" class = "show-more-btn__icon">
