--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <title>Блок с брендами</title>
 </head>
